if(BUILD_ALSA)
    add_subdirectory(alsa)
endif()
add_subdirectory(fileops)
add_subdirectory(filters)
add_subdirectory(mpris)
add_subdirectory(pipewire)
add_subdirectory(rawaudio)
add_subdirectory(sdl)
add_subdirectory(sndfile)
add_subdirectory(tageditor)
add_subdirectory(wavebar)
if(BUILD_LIBVGM)
    add_subdirectory(libvgm)
endif()
