if(BUILD_ALSA)
    add_subdirectory(alsa)
endif()
add_subdirectory(fileops)
add_subdirectory(filters)
add_subdirectory(gme)
add_subdirectory(libarchive)
add_subdirectory(mpris)
add_subdirectory(openmpt)
add_subdirectory(pipewire)
add_subdirectory(rawaudio)
add_subdirectory(sdl)
add_subdirectory(scrobbler)
add_subdirectory(sndfile)
add_subdirectory(tageditor)
add_subdirectory(vumeter)
add_subdirectory(wavebar)
if(BUILD_LIBVGM)
    add_subdirectory(libvgm)
endif()
