if(BUILD_ALSA)
    add_subdirectory(alsa)
endif()

if(UNIX AND NOT APPLE)
    add_subdirectory(mpris)
endif()

add_subdirectory(discord)
add_subdirectory(fileops)
add_subdirectory(filters)
add_subdirectory(gme)
add_subdirectory(libarchive)
add_subdirectory(lyrics)
add_subdirectory(openmpt)
add_subdirectory(pipewire)
add_subdirectory(rawaudio)
add_subdirectory(rgscanner)
add_subdirectory(sdl)
add_subdirectory(scrobbler)
add_subdirectory(sndfile)
add_subdirectory(tageditor)
add_subdirectory(vumeter)
add_subdirectory(wavebar)

if(WIN32)
    add_subdirectory(mediacontrol)
    add_subdirectory(thumbnailtoolbar)
    add_subdirectory(wasapi)
endif()
